# wavelet-matrix-rs

./: .gitignore  .travis.yml  BENCH.md  BENCH_SUM.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: bench.yml  rust.yml
benches/: bencher.rs  easybench.rs  new.rs_
src/: lib.rs  node_range.rs  rsdic_simple.rs  wavelet_matrix.rs
