[package]
name = "wavelet-matrix"
version = "0.3.0"
authors = ["SEKINE, Hideki <sekineh@me.com>"]
description = "A wavelet matrix implementation. Supports various near-O(1) queries on large number of symbols or integers."
repository = "https://github.com/sekineh/wavelet-matrix-rs"
keywords = ["wavelet-matrix", "succinct", "rank", "select"]
categories = ["data-structures"]
readme = "README.md"
license = "MIT"

[dependencies]
succinct = "0.4.2"
