[package]
name = "wavelet-matrix"
version = "0.4.7"
authors = ["SEKINE, Hideki <sekineh@me.com>"]
description = "A wavelet matrix implementation. Supports various near-O(1) queries on large number of symbols or integers."
repository = "https://github.com/sekineh/wavelet-matrix-rs"
keywords = ["wavelet-matrix", "succinct", "rank", "select"]
categories = ["data-structures"]
readme = "README.md"
license = "MIT"

[dependencies]
succinct = "0.4.2"

[dev-dependencies]
rand = "0.3.17"
num = "0.1.40"
itertools = "0.7.2"
# criterion = "0.1.0"
# bencher = "0.1.4"
# easybench = { git = "https://github.com/sekineh/easybench-rs" }
easybench = "0.1.3"

[[bench]]
name = "easybench"
harness = false

[badges]
travis-ci = { repository = "sekineh/wavelet-matrix-rs", branch = "master" }